@@ -7599,3 +7599,7 @@ EPRINTS-3.1.0-rc-4
 ======================================================================
 EPRINTS-3.1.0-rc-5
 ======================================================================
+
+2008-08-11 tdb
+ * Indexer should now stop if asked to stop while busy
+
